cocoa: add separate a11y label for security state decoration

Right now, the tooltip for this repeats the text of the decoration. The text
only really should be repeated in the a11y label, so this change gives
SecurityStateBubbleDecoration a separate a11y label and makes the tooltip just
the "view site information" text.

Bug: 702406
Change-Id: Iff75abd59b558c1c71a02fecb508629132a4e63e
Reviewed-on: https://chromium-review.googlesource.com/602528
Reviewed-by: Mark Mentovai <mark@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492110}
Former-commit-id: 1d7b37d1258fd3a24d07ef745aa37747a3732650